# deep-reasoning

./: .gitignore  README.md  create_project.sh  pyproject.toml  requirements.txt  run.py
app/: __init__.py  extensions.py  models.py
app/api/: routes.py
app/frontend/: __init__.py  routes.py
app/static/css/: main.css
app/static/js/: app.js
app/templates/: index.html  layout.html  research.html
app/tools/: deep_researcher_no_flask.py
tests/: test_app.py
