[project]
name = "llm-api-frontend"
version = "0.1.0"
description = "Dependencies for LLM API frontend"
authors = [
    {name = "Maria Sukhareva"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
